src/objects/PDL_Score__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PDL Event Score Setting</description>
    <fields>
        <fullName>Equivalent_Behaviour__c</fullName>
        <description>Equivalent Payment Behaviour</description>
        <label>Equivalent Behaviour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PDL Score</label>
</CustomObject>